# huawei-codecraft2021

./: CMakeLists.txt  README.md  ant_colony.cpp  ant_colony.h  compile.sh  update-from-hjz.sh  utils.cpp  utils.h  utils_test.cpp
SDK_C++/CodeCraft-2021/: CMakeLists.txt
SDK_C++/CodeCraft-2021/include/: cloud.h  cloudoperator.h  newserverbuyer.h  readwriter.h  server.h  strategy.h  strategytools.h  utils.h  vm.h  vmdeployer.h  vmmigrater.h
SDK_C++/CodeCraft-2021/src/: cloud.cpp  cloudoperator.cpp  dispatcher.cpp  filereadwriter.cpp  main.cpp  newserverbuyer.cpp  server.cpp  simplestrategy.cpp  stdreadwriter.cpp  strategy.cpp  strategytools.cpp  utils.cpp  vm.cpp  vmdeployer.cpp  vmmigrater.cpp
documentation/SDK/: .~21华为软件精英挑战赛-工程编译指导书-C&C++-v1.0.docx
huawei-codecraft2021-ratio/include/: readwriter.h  server.h  strategy.h  vm.h
huawei-codecraft2021-ratio/src/: cloud.cpp  dispatcher.cpp  filereadwriter.cpp  ratiostrategy.cpp  server.cpp  stdreadwriter.cpp
include/: cloud.h  cloudoperator.h  dispatcher.h  global.h  monitor.h  newserverbuyer.h  readwriter.h  server.h  strategy.h  strategytools.h  utils.h  virtual-machine.h  vm.h  vmdeployer.h  vmmigrater.h
src/: cloud.cpp  cloudoperator.cpp  dispatcher.cpp  filereadwriter.cpp  global.cpp  main.cpp  monitor.cpp  newserverbuyer.cpp  ratiostrategy.cpp  server.cpp  simplestrategy.cpp  stdreadwriter.cpp  strategy.cpp  strategytools.cpp  utils.cpp  vm.cpp  vmdeployer.cpp  vmmigrater.cpp
